# video_gst_pipeline

./: CMakeLists.txt  build.sh  setup.sh
include/: coco_classes.hpp  process_result.hpp  triple_buffer.hpp
src/: main.cpp  triple_buffer.cpp
